; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_device_pager.c_dev_pager_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_device_pager.c_dev_pager_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }

@OBJT_DEVICE = common dso_local global i32 0, align 4
@old_dev_pager_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32, %struct.ucred*)* @dev_pager_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dev_pager_alloc(i8* %0, i32 %1, i32 %2, i32 %3, %struct.ucred* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.ucred*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.ucred* %4, %struct.ucred** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* @OBJT_DEVICE, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load %struct.ucred*, %struct.ucred** %10, align 8
  %17 = call i32 @cdev_pager_allocate(i8* %11, i32 %12, i32* @old_dev_pager_ops, i32 %13, i32 %14, i32 %15, %struct.ucred* %16)
  ret i32 %17
}

declare dso_local i32 @cdev_pager_allocate(i8*, i32, i32*, i32, i32, i32, %struct.ucred*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
